--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@rocketseat-ignite-ui/eslint-config",
+  "name": "@miguel-rocketseat-ignite-ui/eslint-config",
+  "version": "1.0.0",
   "license": "MIT",
   "private": true,
   "main": "index.js",
